fix(itinerary-layout): Fixed itinerary page print layout by avoiding clipping of content

--- a/app/globals.css
+++ b/app/globals.css
@@ -26,6 +26,9 @@ body {
 }
 
 @media print {
+  @page {
+    margin: 10mm 10mm;
+  }
   html, body {
     -webkit-print-color-adjust: exact !important;
     print-color-adjust: exact !important;
